--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,17 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0",
+        "php": ">=7.1.0",
         "combi/core": "dev-master"
     },
     "require-dev": {
         "nette/tester": "~2.0"
+    },
+    "autoload": {
+        "psr-4": {"App\\": "src/classes/"},
+        "files": [
+            "src/bootstrap.php"
+        ]
     },
     "minimum-stability": "dev"
 }
