--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "combi/combi",
     "description": "combi project",
     "keywords": ["framework", "combi", "skeleton"],
-    "license": "LGPL3.0",
+    "license": "MIT",
     "authors": [
         {
             "name": "Andares Merigold",
@@ -10,17 +10,13 @@
         }
     ],
     "repositories": [
-        {
-            "type": "vcs",
-            "url":  "https://github.com/andares/combi-core.git"
-        }
     ],
     "require": {
         "php": ">=7.1.0",
         "combi/core": "dev-master"
     },
     "require-dev": {
-        "nette/tester": "~2.0"
+        "nette/tester": "dev-master"
     },
     "autoload": {
         "psr-4": {"App\\": "src/classes/"},
@@ -28,5 +24,5 @@
             "src/bootstrap.php"
         ]
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "stable"
 }
